--- a/hypersapce/index.html
+++ b/hypersapce/index.html
@@ -40,7 +40,7 @@
 					<section id="Accueil" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 
-							<svg>
+							<svg viewBox="0 0 960 300">
 								<symbol id="s-text">
 									<text text-anchor="middle" x="50%" y="80%">No Brain No Gain</text>
 								</symbol>
