--- a/hypersapce/index.html
+++ b/hypersapce/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Hyperspace by HTML5 UP</title>
@@ -19,6 +14,7 @@
 			<section id="sidebar">
 				<div class="inner">
 					<nav>
+						<img src="images/clipart2708970.png" alt="Logo du site" class="logo"/>
 						<ul>
 							<li><a href="#Accueil">No Brain No Gain</a></li>
 							<li><a href="#one">Jeu d'echecs</a></li>
@@ -40,7 +36,7 @@
 					<section id="Accueil" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 
-							<svg viewBox="0 0 960 300">
+							<svg viewBox="0 0 2500 300">
 								<symbol id="s-text">
 									<text text-anchor="middle" x="50%" y="80%">No Brain No Gain</text>
 								</symbol>
@@ -56,7 +52,7 @@
 
 							<p>Venez tester votre reflexion dans ce jeu d'echecs contre l'ordinateur <br />
 							Ou affrontez vous entre amis !</p>
-							<a href="#" class="image"><img src="images/clipart2708970.png" alt="" data-position="center center" /></a>
+							
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Jouer</a></li>
 							</ul>
