--- a/index.html
+++ b/index.html
@@ -1,42 +1,64 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>No Brain No Gain</title>
-
-    <link rel="icon" href="./img/logo.png">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="style.css">
-
+   <meta charset="UTF-8">
+   <title>No Brain No Gain</title>
+   <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+   <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
+   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container">
+         <a class="navbar-brand" href="#">No Brain No Gain</a> <button aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span
+               class="navbar-toggler-icon"></span></button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item active">
+                  <a class="nav-link" href="#">Home</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Portfolio</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Services</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </nav>
 
-    <header>
-        <nav>
-           <div class="menu-icon">
-              <i class="fa fa-bars fa-2x"></i>
-           </div>
-           <div class="logo">
-              LOGO
-           </div>
-           <div class="menu">
-              <ul>
-                 <li><a href="#">No Brain No Gain</a></li>
-                 <li><a href="#">Jeux</a></li>
-                 <li><a href="#">Contact</a></li>
-                 <li><a href="#">Connexion</a></li>
-                 <li><a href="#">Inscription</a></li>
-              </ul>
-           </div>
-        </nav>
-     </header>
 
+
+   <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+   <div class="carousel-caption d-none d-md-block">
+      <h5 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h5>
+      <p class="animated bounceInLeft" style="animation-delay: 2s">Lorem ipsum dolor sit amet, consectetur
+         adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+      <p class="animated bounceInRight" style="animation-delay: 3s"><button class="button"><span><a href="">Inscrivez
+                  vous !</a></span></button></p>
+   </div>
+
+
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
+      </script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+      </script>
 </body>
 
 </html>
