--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+
+   <!-- Fichiers CSS -->
+
    <link href="style.css" rel="stylesheet">
+   <link href="footer.css" rel="stylesheet">
 </head>
 
 <body>
+
+   <!-- Début NavBar -->
+
    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
          <a class="navbar-brand" href="#">No Brain No Gain</a> <button aria-controls="navbarSupportedContent"
@@ -40,25 +47,75 @@
       </div>
    </nav>
 
+   <!-- Fin NavBar -->
 
-
-   <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
-   <div class="carousel-caption d-none d-md-block">
-      <h5 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h5>
-      <p class="animated bounceInLeft" style="animation-delay: 2s">Lorem ipsum dolor sit amet, consectetur
-         adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
-      <p class="animated bounceInRight" style="animation-delay: 3s"><button class="button"><span><a href="">Inscrivez
-                  vous !</a></span></button></p>
+   <div class="container-md">
+      <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+      <div class="carousel-caption d-none d-md-block">
+         <h1 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h1>
+         <p class="animated bounceInLeft" style="animation-delay: 2s">Bienvenue sur No Brain No Gain, le site de jeux de
+            jeux de réflexion parfait pour occuper votre temps libre.</p><br>
+         <p class="animated bounceInRight" style="animation-delay: 3s"><button class="button"><span><a href="">Inscrivez
+                     vous !</a></span></button></p>
+      </div>
    </div>
 
+   <!-- Début Footer -->
 
+   <div class="container-fluid pb-0 mb-0 justify-content-center text-light ">
+      <footer>
+         <div class="row my-5 justify-content-center py-5">
+            <div class="col-11">
+               <div class="row ">
+                  <div class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a">
+                     <h3 class="text-muted mb-md-0 mb-5 bold-text">Pepper.</h3>
+                  </div>
+                  <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                     <h6 class="mb-3 mb-lg-4 bold-text "><b>MENU</b></h6>
+                     <ul class="list-unstyled">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Blog</li>
+                        <li>Portfolio</li>
+                     </ul>
+                  </div>
+                  <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                     <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5"><b>ADDRESS</b></h6>
+                     <p class="mb-1">605, RATAN ICON BUILDING</p>
+                     <p>SEAWOODS SECTOR</p>
+                  </div>
+               </div>
+               <div class="row ">
+                  <div class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end">
+                     <p class="social text-muted mb-0 pb-0 bold-text"> <span class="mx-2"><i class="fa fa-facebook"
+                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-linkedin-square"
+                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-twitter"
+                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-instagram"
+                              aria-hidden="true"></i></span> </p><small class="rights"><span>&#174;</span> Pepper All
+                        Rights Reserved.</small>
+                  </div>
+                  <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end ">
+                     <h6 class="mt-55 mt-2 text-muted bold-text"><b>ANIRUDH SINGLA</b></h6><small> <span><i
+                              class="fa fa-envelope" aria-hidden="true"></i></span> anirudh@gmail.com</small>
+                  </div>
+                  <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-2 align-self-end mt-3 ">
+                     <h6 class="text-muted bold-text"><b>RISHABH SHEKHAR</b></h6><small><span><i class="fa fa-envelope"
+                              aria-hidden="true"></i></span> rishab@gmail.com</small>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </footer>
+   </div>
 
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
-      </script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
-      </script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
-      </script>
+   <!-- Fin Footer -->
+
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+   </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
+   </script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+   </script>
 </body>
 
 </html>
