--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <a class="nav-link" href="#">Services</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="#footer">Contact</a>
                </li>
             </ul>
          </div>
@@ -63,7 +63,7 @@
    <!-- Début Footer -->
 
    <div class="container-fluid pb-0 mb-0 justify-content-center text-light ">
-      <footer>
+      <div id="footer">
          <div class="row my-5 justify-content-center py-5">
             <div class="col-11">
                <div class="row ">
@@ -101,7 +101,7 @@
                </div>
             </div>
          </div>
-      </footer>
+      </div>
    </div>
 
    <!-- Fin Footer -->
