--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#main">Acceuil</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Jeux</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#">Portfolio</a>
@@ -49,14 +49,18 @@
 
    <!-- Fin NavBar -->
 
-   <div class="container-md">
-      <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
-      <div class="carousel-caption d-none d-md-block">
-         <h1 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h1>
-         <p class="animated bounceInLeft" style="animation-delay: 2s">Bienvenue sur No Brain No Gain, le site de jeux de
-            jeux de réflexion parfait pour occuper votre temps libre.</p><br>
-         <p class="animated bounceInRight" style="animation-delay: 3s"><button class="button"><span><a href="">Inscrivez
-                     vous !</a></span></button></p>
+   <div id="main">
+      <div class="container-md">
+         <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+         <div class="carousel-caption d-none d-md-block">
+            <h1 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h1>
+            <p class="animated bounceInLeft" style="animation-delay: 2s">Bienvenue sur No Brain No Gain, le site de jeux
+               de
+               jeux de réflexion parfait pour occuper votre temps libre.</p><br>
+            <p class="animated bounceInRight" style="animation-delay: 3s"><button class="button"><span><a
+                        href="">Inscrivez
+                        vous !</a></span></button></p>
+         </div>
       </div>
    </div>
 
@@ -96,7 +100,8 @@
                   </div>
                   <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-2 align-self-end mt-3 ">
                      <h6 class="text-muted bold-text"><b>Auteurs</b></h6><small><span><i class="fa fa-envelope"
-                              aria-hidden="true"></i></span>Aravindan Colbert<br>Loïc Lim<br>Bilal Hamiche<br>Vincent Nguyen<br>Victor<br>Tom</small>
+                              aria-hidden="true"></i></span>Aravindan Colbert<br>Loïc Lim<br>Bilal Hamiche<br>Vincent
+                        Nguyen<br>Victor<br>Tom</small>
                   </div>
                </div>
             </div>
