--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
    <!-- Fichiers CSS -->
 
-   <link href="style.css" rel="stylesheet">
-   <link href="footer.css" rel="stylesheet">
+   <link href="./css/style.css" rel="stylesheet">
+   <link href="./css/footer.css" rel="stylesheet">
 </head>
 
 <body>
