--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
    <!-- Début NavBar -->
 
-   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+   <nav class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
       <div class="container">
          <a class="navbar-brand" href="#">No Brain No Gain</a> <button aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
@@ -28,19 +28,13 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="#main">Acceuil</a>
+                  <a class="nav-link" href="#">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Jeux</a>
+                  <a class="nav-link" href="#">Games</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="#footer">Contact</a>
+                  <a class="nav-link" href="#">Contact</a>
                </li>
             </ul>
          </div>
@@ -49,30 +43,27 @@
 
    <!-- Fin NavBar -->
 
-   <div id="main">
-      <div class="container-md">
-         <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
-         <div class="carousel-caption d-none d-md-block">
-            <h1 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h1>
-            <p class="animated bounceInLeft" style="animation-delay: 2s">Bienvenue sur No Brain No Gain, le site de jeux
-               de
-               jeux de réflexion parfait pour occuper votre temps libre.</p><br>
-            <p class="animated bounceInRight" style="animation-delay: 3s"><button class="button"><span><a
-                        href="">Inscrivez
-                        vous !</a></span></button></p>
-         </div>
+   <div class="container-md">
+      <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+      <div class="carousel-caption d-none d-md-block">
+         <h1 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h1>
+         <p class="animated bounceInLeft" style="animation-delay: 1.5s">Bienvenue sur No Brain No Gain, le site de jeux
+            de
+            jeux de réflexion parfait pour occuper votre temps libre.</p><br>
+         <p class="animated bounceInRight" style="animation-delay: 2s"><button class="button"><span><a href="">Inscrivez
+                     vous !</a></span></button></p>
       </div>
    </div>
 
    <!-- Début Footer -->
 
    <div class="container-fluid pb-0 mb-0 justify-content-center text-light ">
-      <div id="footer">
+      <footer>
          <div class="row my-5 justify-content-center py-5">
             <div class="col-11">
                <div class="row ">
                   <div class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a">
-                     <h3 class="text-muted mb-md-0 mb-5 bold-text">No Brain No Gain</h3>
+                     <h3 class="text-muted mb-md-0 mb-5 bold-text">Pepper.</h3>
                   </div>
                   <div class="col-xl-2 col-md-4 col-sm-4 col-12">
                      <h6 class="mb-3 mb-lg-4 bold-text "><b>MENU</b></h6>
@@ -91,7 +82,11 @@
                </div>
                <div class="row ">
                   <div class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end">
-                     <small class="rights"><span>&#174;</span> No Brain No Gain All
+                     <p class="social text-muted mb-0 pb-0 bold-text"> <span class="mx-2"><i class="fa fa-facebook"
+                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-linkedin-square"
+                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-twitter"
+                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-instagram"
+                              aria-hidden="true"></i></span> </p><small class="rights"><span>&#174;</span> Pepper All
                         Rights Reserved.</small>
                   </div>
                   <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end ">
@@ -99,14 +94,13 @@
                               class="fa fa-envelope" aria-hidden="true"></i></span> anirudh@gmail.com</small>
                   </div>
                   <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-2 align-self-end mt-3 ">
-                     <h6 class="text-muted bold-text"><b>Auteurs</b></h6><small><span><i class="fa fa-envelope"
-                              aria-hidden="true"></i></span>Aravindan Colbert<br>Loïc Lim<br>Bilal Hamiche<br>Vincent
-                        Nguyen<br>Victor<br>Tom</small>
+                     <h6 class="text-muted bold-text"><b>RISHABH SHEKHAR</b></h6><small><span><i class="fa fa-envelope"
+                              aria-hidden="true"></i></span> rishab@gmail.com</small>
                   </div>
                </div>
             </div>
          </div>
-      </div>
+      </footer>
    </div>
 
    <!-- Fin Footer -->
@@ -117,6 +111,13 @@
    </script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
    </script>
+
+   <script>
+      $(window).scroll(function () {
+         $('nav').toggleClass('scrolled', $(this).scrollTop() > 50);
+      });
+   </script>
+
 </body>
 
 </html>
