--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
 
-   <!-- Fichiers CSS -->
+   <!-- Fichier CSS -->
 
    <link href="./css/style.css" rel="stylesheet">
-   <link href="./css/footer.css" rel="stylesheet">
+
 </head>
 
 <body>
 
    <!-- Début NavBar -->
 
-   <nav class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
+   <nav id="nav" class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
       <div class="container">
          <a class="navbar-brand" href="#">No Brain No Gain</a> <button aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="#">Games</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="#footer">Contact</a>
                </li>
             </ul>
          </div>
@@ -46,18 +46,17 @@
    <div class="container-md">
       <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
       <div class="carousel-caption d-none d-md-block">
-         <h1 class="animated bounceInRight" style="animation-delay: 1s">No Brain No Gain</h1>
-         <p class="animated bounceInLeft" style="animation-delay: 1.5s">Bienvenue sur No Brain No Gain, le site de jeux
-            de
-            jeux de réflexion parfait pour occuper votre temps libre.</p><br>
-         <p class="animated bounceInRight" style="animation-delay: 2s"><button class="button"><span><a href="">Inscrivez
+         <h1 class="animated bounceInRight" style="animation-delay: 0.5s">No Brain No Gain</h1>
+         <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
+            de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
+         <p class="animated bounceInRight" style="animation-delay: 1.5s"><button class="button"><span><a href="">Inscrivez
                      vous !</a></span></button></p>
       </div>
    </div>
 
    <!-- Début Footer -->
 
-   <div class="container-fluid pb-0 mb-0 justify-content-center text-light ">
+   <div id="footer" class="container-fluid pb-0 mb-0 justify-content-center text-light ">
       <footer>
          <div class="row my-5 justify-content-center py-5">
             <div class="col-11">
@@ -112,11 +111,9 @@
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
    </script>
 
-   <script>
-      $(window).scroll(function () {
-         $('nav').toggleClass('scrolled', $(this).scrollTop() > 50);
-      });
-   </script>
+   <!-- Fichiers JS -->
+   
+   <script src="./js/myscript.js"></script>
 
 </body>
 
