--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <!-- Fin NavBar -->
 
    <div class="container-md">
-      <img alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+      <img id="img" alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
       <div class="carousel-caption d-none d-md-block">
          <h1 class="animated bounceInRight" style="animation-delay: 0.5s">No Brain No Gain</h1>
          <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
