--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <title>No Brain No Gain</title>
+
+   <link rel="icon" type="image/png" href="./img/logo.png">
    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +30,7 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#cover">Home</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#">Games</a>
@@ -43,76 +45,103 @@
 
    <!-- Fin NavBar -->
 
-   <div class="container-md">
-      <img id="img" alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
-      <div class="carousel-caption d-none d-md-block">
-         <h1 class="animated bounceInRight" style="animation-delay: 0.5s">No Brain No Gain</h1>
-         <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
-            de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
-         <p class="animated bounceInRight" style="animation-delay: 1.5s"><button class="button"><span><a href="">Inscrivez
-                     vous !</a></span></button></p>
+   <!-- Début du contenu de la page -->
+
+   <div id="cover">
+      <div class="container-md">
+         <img id="img" alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+         <div class="carousel-caption d-none d-md-block">
+            <h1 class="animated bounceInRight" style="animation-delay: 0.5s">No Brain No Gain</h1>
+            <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
+               de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
+            <p class="animated bounceInRight" style="animation-delay: 1.5s"><button class="button"><span><a
+                        href="">Inscrivez vous !</a></span></button></p>
+         </div>
       </div>
    </div>
 
+   <div class="games">
+      <h2>NOS JEUX</h2>
+      <div class="row">
+         <div class="col-sm-4">
+            <img class="img-fluid" src="./img/photo-1560174038-da43ac74f01b.jfif" alt="Responsive image">
+         </div>
+         <div class="col-sm-4">
+            <img class="img-fluid" src="./img/photo-1551198581-aec5c1556d7c.jfif" alt="Responsive image">
+         </div>
+         <div class="col-sm-4"></div>
+      </div>
+   </div>
+
+   <!-- Fin du contenu de la page -->
+
    <!-- Début Footer -->
 
-   <div id="footer" class="container-fluid pb-0 mb-0 justify-content-center text-light ">
-      <footer>
-         <div class="row my-5 justify-content-center py-5">
-            <div class="col-11">
-               <div class="row ">
-                  <div class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a">
-                     <h3 class="text-muted mb-md-0 mb-5 bold-text">Pepper.</h3>
+   <footer id="footer" class="container-fluid bg-grey py-5">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-6">
+               <div class="row">
+                  <div class="col-md-6 ">
+                     <div class="logo-part">
+                        <img src="./img/logo.png" class="w-50 logo-footer">
+                        <p>7637 Laurel Dr. King Of Prussia, PA 19406</p>
+                        <p>Use this tool as test data for an automated system or find your next pen</p>
+                     </div>
                   </div>
-                  <div class="col-xl-2 col-md-4 col-sm-4 col-12">
-                     <h6 class="mb-3 mb-lg-4 bold-text "><b>MENU</b></h6>
-                     <ul class="list-unstyled">
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Blog</li>
-                        <li>Portfolio</li>
-                     </ul>
-                  </div>
-                  <div class="col-xl-2 col-md-4 col-sm-4 col-12">
-                     <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5"><b>ADDRESS</b></h6>
-                     <p class="mb-1">605, RATAN ICON BUILDING</p>
-                     <p>SEAWOODS SECTOR</p>
+                  <div class="col-md-6 px-4">
+                     <h6> About Company</h6>
+                     <p>But horizontal lines can only be a full pixel high.</p>
+                     <a href="#" class="btn-footer"> More Info </a><br>
+                     <a href="#" class="btn-footer"> Contact Us</a>
                   </div>
                </div>
-               <div class="row ">
-                  <div class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end">
-                     <p class="social text-muted mb-0 pb-0 bold-text"> <span class="mx-2"><i class="fa fa-facebook"
-                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-linkedin-square"
-                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-twitter"
-                              aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-instagram"
-                              aria-hidden="true"></i></span> </p><small class="rights"><span>&#174;</span> Pepper All
-                        Rights Reserved.</small>
+            </div>
+            <div class="col-md-6">
+               <div class="row">
+                  <div class="col-md-6 px-4">
+                     <h6> Help us</h6>
+                     <div class="row ">
+                        <div class="col-md-6">
+                           <ul>
+                              <li> <a href="#">Home</a> </li>
+                              <li> <a href="#">About</a> </li>
+                              <li> <a href="#">Service</a> </li>
+                              <li> <a href="#">Team</a> </li>
+                              <li> <a href="#">Help</a> </li>
+                              <li> <a href="#">Contact</a> </li>
+                           </ul>
+                        </div>
+                     </div>
                   </div>
-                  <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end ">
-                     <h6 class="mt-55 mt-2 text-muted bold-text"><b>ANIRUDH SINGLA</b></h6><small> <span><i
-                              class="fa fa-envelope" aria-hidden="true"></i></span> anirudh@gmail.com</small>
-                  </div>
-                  <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-2 align-self-end mt-3 ">
-                     <h6 class="text-muted bold-text"><b>RISHABH SHEKHAR</b></h6><small><span><i class="fa fa-envelope"
-                              aria-hidden="true"></i></span> rishab@gmail.com</small>
+                  <div class="col-md-6 ">
+                     <h6>Auteurs</h6>
+                     <ul>
+                        <li> <a href="#">Vincent NGUYEN</a></li>
+                        <li> <a href="#">Loïc LIM</a></li>
+                        <li> <a href="#">Aravindan COLBERT</a></li>
+                        <li> <a href="#">Bilal HAMICHE</a></li>
+                        <li> <a href="#">Tom BRUDER</a></li>
+                        <li> <a href="#">Victor VAKHITOV</a></li>
+                     </ul>
                   </div>
                </div>
             </div>
          </div>
-      </footer>
-   </div>
+      </div>
+   </footer>
 
    <!-- Fin Footer -->
 
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
-   </script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
-   </script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
-   </script>
+
+   <!-- Scripts -->
+
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
    <!-- Fichiers JS -->
-   
+
    <script src="./js/myscript.js"></script>
 
 </body>
