--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
    <div class="games">
       <h2>NOS JEUX</h2>
       <div class="row">
+         <div class="col-sm-12">
+            <hr class="gauche">
+            <img src="./img/joystick.png" class="icon">
+            <hr class="droite">
+         </div>
+      </div>
+      <div class="row">
          <div class="col-sm-4">
             <img class="img-fluid" src="./img/photo-1560174038-da43ac74f01b.jfif" alt="Responsive image">
          </div>
