--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
 
-   <!-- Fichier CSS test de test-->
+   <!-- Fichier CSS test III-->
 
    <link href="./css/style.css" rel="stylesheet">
 
