--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-   <!-- Fichier CSS -->
+   <!-- Fichier CSS version TEST-->
 
    <link href="./css/style.css" rel="stylesheet">
 
