--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
    <div id="cover">
       <div class="container-md">
-         <img id="img" alt="First slide" class="d-block w-100" src="./img/photo-1542625202-258b9106f29e.jfif">
+         <img id="img" alt="First slide" class="d-block w-100" src="./img/Arcade.png">
          <div class="carousel-caption d-none d-md-block">
             <h1 class="animated bounceInRight" style="animation-delay: 0.5s">No Brain No Gain</h1>
             <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
