--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="#cover">Home</a>
+                  <a class="nav-link" href="#cover">Accueil</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Games</a>
+                  <a class="nav-link" href="#">Jeux</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#footer">Contact</a>
