--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
                de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
             <p class="animated bounceInRight" style="animation-delay: 1.5s"><button class="button"><span><a
-                        href="">Inscrivez vous !</a></span></button></p>
+                        href="./login.html">Inscrivez vous !</a></span></button></p>
          </div>
       </div>
    </div>
