add animation & design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    <nav id="nav" class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
       <div class="container">
-         <a class="navbar-brand" href="#">No Brain No Gain</a> <button aria-controls="navbarSupportedContent"
+        <p class="alpha">NO BRAIN NO GAIN</p><button aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span
                class="navbar-toggler-icon"></span></button>
@@ -290,6 +290,73 @@
                         <li> <a href="#">Victor VAKHITOV</a></li>
                      </ul>
                   </div>
+
+
+
+                  <div class='machine shake-slow'>
+                    <div class='shine'></div>
+                    <div class='top'>
+                      <div class='screwTop'></div>
+                      <div class='panels'>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                      </div>
+                    </div>
+                    <div class='screen'></div>
+                    <div class='table color'>
+                      <div class='butt'></div>
+                      <div class='stick'></div>
+                    </div>
+                    <div class='bottom color'>
+                      <div class='line'></div>
+                      <div class='line'></div>
+                      <div class='screw'></div>
+                      <div class='panels'>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                      </div>
+                      <div class='screwRight'></div>
+                    </div>
+                  </div>
+
+                  <!-- Partie animation footer -->
+
+                  <div class='machine shake-slow'>
+                    <div class='shine'></div>
+                    <div class='top'>
+                      <div class='screwTop'></div>
+                      <div class='panels'>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                      </div>
+                    </div>
+                    <div class='screen'></div>
+                    <div class='table color'>
+                      <div class='butt'></div>
+                      <div class='stick'></div>
+                    </div>
+                    <div class='bottom color'>
+                      <div class='line'></div>
+                      <div class='line'></div>
+                      <div class='screw'></div>
+                      <div class='panels'>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                        <div class='panel'></div>
+                      </div>
+                      <div class='screwRight'></div>
+                    </div>
+                  </div>
+
+                  <!-- Partie animation footer -->
+                  
                </div>
             </div>
          </div>
